Re-structed Project files and folders, updated app modules, added edit contact modal.

--- a/www/index.html
+++ b/www/index.html
@@ -25,16 +25,19 @@
     <script src="angular/app.config.js"></script>
 
     <!-- Angular App Dependencies -->
-    <script src="angular/controllers/app.controllers.js"></script>
+    <script src="angular/modules/app.modules.js"></script>
     <script src="angular/factories/app.factories.js"></script>
     
     <!-- Angular App Factories -->
     <script src="angular/factories/helpers.js"></script>
 
-    <!-- Angular App Controllers -->
-    <script src="angular/controllers/base/controller.js"></script>
-    <script src="angular/controllers/home/controller.js"></script>
-    <script src="angular/controllers/about/controller.js"></script>
+    <!-- Angular App Modules -->
+    <script src="angular/modules/base/controller.js"></script>
+
+    <script src="angular/modules/home/controller.js"></script>
+    <script src="angular/modules/home/service.js"></script>
+    
+    <script src="angular/modules/about/controller.js"></script>
 
   </head>
   <body ng-app="contacts-app">
