--- a/www/angular/modules/base/view.html
+++ b/www/angular/modules/base/view.html
@@ -3,22 +3,24 @@
   <!-- Center content -->
   <ion-side-menu-content>
     
-    <ion-nav-bar class="bar-positive">
-
+    <ion-nav-bar class="bar-balanced">
       <ion-nav-buttons side="left">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
       </ion-nav-buttons>
-
     </ion-nav-bar>
 
     <!-- UI-VIEW -->
     <ion-nav-view name="AppContent"></ion-nav-view>
 
+    <ion-footer-bar>
+
+    </ion-footer-bar>
+
   </ion-side-menu-content>
 
   <!-- Left menu -->
   <ion-side-menu side="left">
-    <ion-header-bar align-title="left" class="bar-positive">
+    <ion-header-bar align-title="left" class="bar-balanced">
       <h1 class="title">Menu</h1>
     </ion-header-bar>
     <ion-content>
