Updated file namings, updated app layout, and added ids for dummy data.

--- a/www/angular/modules/home/view.form.html
+++ b/www/angular/modules/home/view.form.html
@@ -11,7 +11,7 @@
     <div class="tabs tabs-icon-top">
       <a class="tab-item balanced"><i class="icon ion-ios-checkmark"></i>Save</a> 
       <a class="tab-item"></a> 
-      <a class="tab-item assertive" ng-click="home.CloseEditModal()"><i class="icon ion-ios-close"></i>Close</a>
+      <a class="tab-item assertive" ng-click="home.CloseFormModal()"><i class="icon ion-ios-close"></i>Close</a>
     </div>
   </ion-footer-bar>
 </ion-modal-view>
