--- a/www/angular/modules/home/view.html
+++ b/www/angular/modules/home/view.html
@@ -1,5 +1,6 @@
 <ion-view view-title="Contacts">
   <ion-nav-buttons side="right">
+    <button class="button button-icon button-balanced ion-ios-plus-empty"></button>
     <button class="button button-icon button-balanced"
             ng-class="{'ion-ios-albums-outline': !home.shouldShowReorder, 'ion-ios-close-empty': home.shouldShowReorder}"
             ng-click="home.shouldShowReorder = (home.shouldShowReorder) ? false : true">
@@ -8,12 +9,24 @@
   <ion-content>
     <ion-list type="card"
               show-reorder="home.shouldShowReorder">
-      <ion-item class="item-thumbnail-left" ng-repeat="contact in home.contacts">
+      <!-- Search Bar -->
+      <ion-item class="item-input-inset">
+          <label class="item-input-wrapper">
+            <i class="icon ion-ios-search placeholder-icon"></i>
+            <input type="search" placeholder="Search" ng-model="home.searchQuery">
+          </label>
+      </ion-item>
+      
+      <!-- List Item(s) -->
+      <ion-item class="item-thumbnail-left" ng-repeat="contact in contacts = (home.contacts | filter: home.searchQuery)">
         <img ng-src="{{ contact.profile_image }}" />
         <h2>{{ contact.last_name }}, {{ contact.first_name }}</h2>
-        <ion-option-button class="button-positive" ng-click="home.OpenEditModal()">Edit</ion-option-button>
+        <ion-option-button class="button-positive" ng-click="home.OpenFormModal()">Edit</ion-option-button>
         <ion-reorder-button class="ion-ios-drag" on-reorder="home.ReorderContacts(contact, home.contacts, $fromIndex, $toIndex)"></ion-reorder-button>
       </ion-item>
+
+      <ion-item ng-hide="contacts.length">Contact List is Empty</ion-item>
     </ion-list>
   </ion-content>
+
 </ion-view>
