Fixed general issues & updated app libraries
* Fixed search query where it doesn't properly display the contacts
* Added Initialize Modal in Ionic helper methods
* Updated bower components

--- a/www/angular/modules/home/view.form.html
+++ b/www/angular/modules/home/view.form.html
@@ -1,10 +1,10 @@
 <ion-modal-view>
   <ion-header-bar>
-    <h1 class="title">Edit Contact</h1>
+    <h1 class="title">Contact Form</h1>
   </ion-header-bar>
 
   <ion-content>
-    This is edit modal
+    This is a modal
   </ion-content>
 
   <ion-footer-bar align-title="center" class="bar-light">
