--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,10 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+    <!-- Vendor Scripts -->
+    <script src="lib/clusterize/clusterize.min.js"></script>
+
+
     <!-- Angular App -->
     <script src="angular/app.js"></script>
     <script src="angular/app.constants.js"></script>
@@ -29,7 +33,7 @@
     <script src="angular/factories/app.factories.js"></script>
     
     <!-- Angular App Factories -->
-    <script src="angular/factories/helpers.js"></script>
+    <script src="angular/factories/ionic-helpers.js"></script>
 
     <!-- Angular App Modules -->
     <script src="angular/modules/base/controller.js"></script>
