--- a/www/angular/modules/home/view.html
+++ b/www/angular/modules/home/view.html
@@ -13,16 +13,16 @@
       <ion-item class="item-input-inset">
           <label class="item-input-wrapper">
             <i class="icon ion-ios-search placeholder-icon"></i>
-            <input type="search" placeholder="Search" ng-model="home.searchQuery">
+            <input type="search" placeholder="Search" ng-model="home.searchQuery" />
           </label>
       </ion-item>
       
       <!-- List Item(s) -->
-      <ion-item class="item-thumbnail-left" ng-repeat="contact in contacts = (home.contacts | filter: home.searchQuery)">
+      <ion-item class="item item-avatar" ng-repeat="contact in contacts = (home.contacts | filter: home.searchQuery) track by $index">
         <img ng-src="{{ contact.profile_image }}" />
         <h2>{{ contact.last_name }}, {{ contact.first_name }}</h2>
         <ion-option-button class="button-positive" ng-click="home.OpenFormModal()">Edit</ion-option-button>
-        <ion-reorder-button class="ion-ios-drag" on-reorder="home.ReorderContacts(contact, home.contacts, $fromIndex, $toIndex)"></ion-reorder-button>
+        <ion-reorder-button class="ion-ios-drag" on-reorder="home.contacts = home.ReorderContacts(contact, home.contacts, $fromIndex - 1, $toIndex)"></ion-reorder-button>
       </ion-item>
 
       <ion-item ng-hide="contacts.length">Contact List is Empty</ion-item>
