--- a/www/angular/modules/home/view.html
+++ b/www/angular/modules/home/view.html
@@ -26,7 +26,8 @@
         <ion-reorder-button class="ion-ios-drag" on-reorder="home.contacts = home.ReorderContacts(contact, home.contacts, $fromIndex - 1, $toIndex)"></ion-reorder-button>
       </ion-item>
 
-      <ion-item ng-hide="contacts.length">Contact List is Empty</ion-item>
+      <ion-item ng-show="!contacts.length && !home.searchQuery.length">Contact List Is Empty</ion-item>
+      <ion-item ng-show="!contacts.length && home.searchQuery.length">No Contact(s) Found</ion-item>
     </ion-list>
   </ion-content>
 
