Added form inputs.

--- a/www/angular/modules/home/view.form.html
+++ b/www/angular/modules/home/view.form.html
@@ -4,7 +4,22 @@
   </ion-header-bar>
 
   <ion-content>
-    This is a modal
+    <div class="form">
+      <div class="list list-inset">
+        <label class="item item-input">
+          <input type="text" placeholder="First Name">
+        </label>
+        <label class="item item-input">
+          <input type="text" placeholder="Last Name">
+        </label>
+        <label class="item item-input">
+          <input type="tel" placeholder="Phone">
+        </label>
+        <label class="item item-input">
+          <input type="email" placeholder="Email">
+        </label>
+      </div>
+    </div>
   </ion-content>
 
   <ion-footer-bar align-title="center" class="bar-light">
