--- a/www/angular/modules/home/view.form.html
+++ b/www/angular/modules/home/view.form.html
@@ -7,16 +7,16 @@
     <div class="form">
       <div class="list list-inset">
         <label class="item item-input">
-          <input type="text" placeholder="First Name">
+          <input type="text" placeholder="First Name" />
         </label>
         <label class="item item-input">
-          <input type="text" placeholder="Last Name">
+          <input type="text" placeholder="Last Name" />
         </label>
         <label class="item item-input">
-          <input type="tel" placeholder="Phone">
+          <input type="tel" placeholder="Phone" />
         </label>
         <label class="item item-input">
-          <input type="email" placeholder="Email">
+          <input type="email" placeholder="Email" />
         </label>
       </div>
     </div>
