--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,7 @@
     <script src="angular/factories/app.factories.js"></script>
     
     <!-- Angular App Factories -->
+    <script src="angular/factories/common-helpers.js"></script>
     <script src="angular/factories/ionic-helpers.js"></script>
 
     <!-- Angular App Modules -->
