--- a/www/angular/modules/home/view.html
+++ b/www/angular/modules/home/view.html
@@ -20,10 +20,12 @@
     <ion-list type="card" show-reorder="home.shouldShowReorder">
     
       <!-- List Item(s) -->
-      <ion-item class="item item-avatar" ng-repeat="contact in contacts = (home.contacts | filter: home.searchQuery) track by $index">
+      <ion-item class="item item-avatar"
+                ng-click="home.EditContact(contact.id)"
+                ng-repeat="contact in contacts = (home.contacts | filter: home.searchQuery) track by $index">
         <img ng-src="img/contacts/{{ contact.profile_image }}" />
         <h2>{{ contact.last_name }}, {{ contact.first_name }}</h2>
-        <ion-option-button class="button-positive" ng-click="home.OpenFormModal()">Edit</ion-option-button>
+        <ion-option-button class="button-assertive" ng-click="home.OpenFormModal()">Delete</ion-option-button>
         <ion-reorder-button class="ion-ios-drag" on-reorder="home.contacts = home.ReorderContacts(contact, home.contacts, $fromIndex - 1, $toIndex)"></ion-reorder-button>
       </ion-item>
 
