--- a/www/angular/modules/home/view.html
+++ b/www/angular/modules/home/view.html
@@ -25,7 +25,7 @@
                 ng-repeat="contact in contacts = (home.contacts | filter: home.searchQuery) track by $index">
         <img ng-src="img/contacts/{{ contact.profile_image }}" />
         <h2>{{ contact.last_name }}, {{ contact.first_name }}</h2>
-        <ion-option-button class="button-assertive" ng-click="home.OpenFormModal()">Delete</ion-option-button>
+        <ion-option-button class="button-assertive" ng-click="home.DeleteContact(contact.id)">Delete</ion-option-button>
         <ion-reorder-button class="ion-ios-drag" on-reorder="home.contacts = home.ReorderContacts(contact, home.contacts, $fromIndex - 1, $toIndex)"></ion-reorder-button>
       </ion-item>
 
