Updated About page.

--- a/www/angular/modules/about/view.html
+++ b/www/angular/modules/about/view.html
@@ -1,5 +1,6 @@
 <ion-view view-title="About">
   <ion-content>
-    <h1>About Page</h1>
+    <h1 class="title">Created by Renemari Padillo</h1>
+    <h3>LICENSE: MIT</h3>
   </ion-content>
 </ion-view>
